log
mi., 15 de feb. de 2023 12:35:23: 
 tests:  0|6
total_score: 0/70
7964391
Wed 29 Mar 2023 01:36:04 PM UTC: 
 arraylist.c | 15 +++++++++++++--
 1 file changed, 13 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
f3f0dd0
Wed 29 Mar 2023 01:38:38 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
9557700
Wed 29 Mar 2023 01:49:32 PM UTC: 
 arraylist.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘append’:
arraylist.c:33:66: error: expected ‘)’ before ‘;’ token
   33 |     l -> data = realloc(l-> data, l -> capacity * sizeof(void **);
      |                                                                  ^
      |                                                                  )
arraylist.c:33:67: error: expected ‘;’ before ‘}’ token
   33 |     l -> data = realloc(l-> data, l -> capacity * sizeof(void **);
      |                                                                   ^
      |                                                                   ;
   34 |   }
      |   ~                                                                
Compilation failed
1a06984
Wed 29 Mar 2023 01:55:22 PM UTC: 
 arraylist.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘append’:
arraylist.c:33:66: error: expected ‘)’ before ‘;’ token
   33 |     l -> data = realloc(l-> data, l -> capacity * sizeof(void **);
      |                                                                  ^
      |                                                                  )
arraylist.c:33:67: error: expected ‘;’ before ‘}’ token
   33 |     l -> data = realloc(l-> data, l -> capacity * sizeof(void **);
      |                                                                   ^
      |                                                                   ;
   34 |   }
      |   ~                                                                
arraylist.c: In function ‘clean’:
arraylist.c:60:7: error: too many arguments to function ‘createList’
   60 |   l = createList(l);
      |       ^~~~~~~~~~
arraylist.c:13:12: note: declared here
   13 | ArrayList *createList(void)
      |            ^~~~~~~~~~
Compilation failed
1cf93c4
Wed 29 Mar 2023 01:55:35 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘append’:
arraylist.c:33:66: error: expected ‘)’ before ‘;’ token
   33 |     l -> data = realloc(l-> data, l -> capacity * sizeof(void **);
      |                                                                  ^
      |                                                                  )
arraylist.c:33:67: error: expected ‘;’ before ‘}’ token
   33 |     l -> data = realloc(l-> data, l -> capacity * sizeof(void **);
      |                                                                   ^
      |                                                                   ;
   34 |   }
      |   ~                                                                
arraylist.c: In function ‘clean’:
arraylist.c:60:8: error: too many arguments to function ‘createList’
   60 |   l = *createList(l);
      |        ^~~~~~~~~~
arraylist.c:13:12: note: declared here
   13 | ArrayList *createList(void)
      |            ^~~~~~~~~~
arraylist.c:60:7: error: incompatible types when assigning to type ‘ArrayList *’ {aka ‘struct ArrayList *’} from type ‘ArrayList’ {aka ‘struct ArrayList’}
   60 |   l = *createList(l);
      |       ^
Compilation failed
8f56afa
Wed 29 Mar 2023 01:56:06 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘append’:
arraylist.c:33:66: error: expected ‘)’ before ‘;’ token
   33 |     l -> data = realloc(l-> data, l -> capacity * sizeof(void **);
      |                                                                  ^
      |                                                                  )
arraylist.c:33:67: error: expected ‘;’ before ‘}’ token
   33 |     l -> data = realloc(l-> data, l -> capacity * sizeof(void **);
      |                                                                   ^
      |                                                                   ;
   34 |   }
      |   ~                                                                
Compilation failed
fd1d357
Wed 29 Mar 2023 02:00:19 PM UTC: 
 arraylist.c | 2 ++
 1 file changed, 2 insertions(+)
In file included from test.c:5:
arraylist.c: In function ‘append’:
arraylist.c:33:66: error: expected ‘)’ before ‘;’ token
   33 |     l -> data = realloc(l-> data, l -> capacity * sizeof(void **);
      |                                                                  ^
      |                                                                  )
arraylist.c:33:67: error: expected ‘;’ before ‘}’ token
   33 |     l -> data = realloc(l-> data, l -> capacity * sizeof(void **);
      |                                                                   ^
      |                                                                   ;
   34 |   }
      |   ~                                                                
Compilation failed
90ea033
Wed 29 Mar 2023 02:02:31 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|3
total_score: 30/70
ce9542a
Wed 29 Mar 2023 02:12:57 PM UTC: 
 arraylist.c | 17 ++++++++++++++++-
 1 file changed, 16 insertions(+), 1 deletion(-)
 tests:  4|3
total_score: 30/70
d82978a
Wed 29 Mar 2023 02:14:42 PM UTC: 
 arraylist.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  4|3
total_score: 30/70
c302fdd
Wed 29 Mar 2023 02:15:11 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|2
total_score: 40/70
1f533e5
